# cpp-tetris

./: .clangd  .gitignore  CMakeLists.txt  README.md
lib/: all_headers.h  helper.hpp  tetris.cpp  tetris.hpp
test/: ApprovalTests.hpp  main.cpp  test_shapes.cpp  test_tetris.cpp
test/approval_tests/: test_shapes.ShapesSanityCheck.approved.txt  test_shapes.Shapes_Test.approved.txt  test_tetris.TetrisBasic.FourCWRotates.approved.txt  test_tetris.TetrisBasic.TwoDowns.approved.txt  test_tetris.TetrisClear.CanClear1.approved.txt  test_tetris.TetrisHold.CanHold.approved.txt
